; ModuleID = '/home/carl/AnghaBench/RetroArch/input/drivers_joypad/extr_xinput_joypad.c_xinput_joypad_name.c'
source_filename = "/home/carl/AnghaBench/RetroArch/input/drivers_joypad/extr_xinput_joypad.c_xinput_joypad_name.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i8* (i32)* }

@XBOX_CONTROLLER_NAMES = common dso_local global i8** null, align 8
@XBOX_ONE_CONTROLLER_NAMES = common dso_local global i8** null, align 8
@dinput_joypad = common dso_local global %struct.TYPE_2__ zeroinitializer, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @xinput_joypad_name(i32 %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %5 = load i32, i32* %3, align 4
  %6 = call i32 @pad_index_to_xuser_index(i32 %5)
  store i32 %6, i32* %4, align 4
  %7 = load i32, i32* %4, align 4
  %8 = icmp slt i32 %7, 0
  br i1 %8, label %9, label %10

9:                                                ; preds = %1
  store i8* null, i8** %2, align 8
  br label %16

10:                                               ; preds = %1
  %11 = load i8**, i8*** @XBOX_CONTROLLER_NAMES, align 8
  %12 = load i32, i32* %4, align 4
  %13 = sext i32 %12 to i64
  %14 = getelementptr inbounds i8*, i8** %11, i64 %13
  %15 = load i8*, i8** %14, align 8
  store i8* %15, i8** %2, align 8
  br label %16

16:                                               ; preds = %10, %9
  %17 = load i8*, i8** %2, align 8
  ret i8* %17
}

declare dso_local i32 @pad_index_to_xuser_index(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
